# porn-transfer

./: .gitignore  README-macOS.txt  generate-key.exp  install-receiver.command  install-sender.command
.github/workflows/: build.yml
Mac/: BUILD.md  PhotoReceiver.spec  PhotoSender.spec  build_mac.sh  build_mac1.sh  sender.py
Mac/dist1/PhotoReceiver.app/Contents/: Info.plist
Windows/: PhotoReceiver.spec  PhotoSender.spec  QUICK_BUILD.md  README.md  build_mac.sh  build_windows.bat  organize_windows.bat  receiver.py  requirements.txt
Windows/__MACOSX/: ._icon.icns
photo-transfer/: index.html  package-lock.json  package.json
photo-transfer/src/: main.ts  styles.css
photo-transfer/src-tauri/: Cargo.toml  tauri.conf.json
photo-transfer/src-tauri/src/: config.rs  discovery.rs  lib.rs  main.rs  transfer.rs
porn-receiver/: index.html  package-lock.json  package.json  vite.config.ts
porn-receiver/src/: main.ts  styles.css
porn-receiver/src-tauri/: Cargo.toml  tauri.conf.json
porn-receiver/src-tauri/capabilities/: default.json
porn-receiver/src-tauri/icons/: icon.icns
porn-receiver/src-tauri/src/: config.rs  discovery.rs  lib.rs  main.rs  server.rs  transfer.rs
release-new/: sender-latest.json
release-signed/: latest.json
release-v0.3.0/: latest.json
update-server/: package-lock.json  package.json  prepare-update.sh  server.js
update-server-app/: index.html  package-lock.json  package.json
update-server-app/src/: main.ts  styles.css
update-server-app/src-tauri/: Cargo.toml  tauri.conf.json
update-server-app/src-tauri/src/: lib.rs  main.rs
(+11 files in other folders)
