[package]
name = "porn-receiver"
version = "0.3.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "porn_receiver_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
mdns-sd = "0.11"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
uuid = { version = "1", features = ["v4"] }
hostname = "0.3"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
