[package]
name = "update-server-app"
version = "0.1.0"
description = "Porn Transfer Update Server"
authors = ["Digital Artisans"]
edition = "2021"

[lib]
name = "update_server_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
chrono = "0.4"
dirs = "5"
mdns-sd = "0.11"
hostname = "0.3"
base64 = "0.21"
